handy.txt
[ 99%] Building CXX object src/example/CMakeFiles/mpsi.dir/multipartypsi.cpp.o
/home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp:277:66: error: ‘bool run_query(int, int, int, bool, const std::string&, int)’ redeclared as different kind of entity
  277 |                const std::string& server_address, int server_port) {
      |                                                                  ^
In file included from /home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp:4:
/home/ic/Desktop/moreSecyan/src/example/TPCH.h:41:7: note: previous declaration ‘using run_query = void(enum DataSize, bool)’
   41 | using run_query = void(DataSize, bool);
      |       ^~~~~~~~~
/home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp: In lambda function:
/home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp:347:60: error: expression list treated as compound expression in functional cast [-fpermissive]
  347 |                                 server_address, server_port);
      |                                                            ^
/home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp:346:24: error: invalid cast to function type ‘run_query’ {aka ‘void(DataSize, bool)’}
  346 |         bool success = run_query(role, query_type, data_size, result_protection,
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  347 |                                 server_address, server_port);
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [src/example/CMakeFiles/mpsi.dir/build.make:76: src/example/CMakeFiles/mpsi.dir/multipartypsi.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:833: src/example/CMakeFiles/mpsi.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
Web目录路径: /home/ic/Desktop/moreSecyan/Release/src/example/web
Web服务器启动在 http://localhost:8080
Error running query: rt error at /home/ic/Desktop/moreSecyan/extern/libOTe/cryptoTools/cryptoTools/Network/Session.cpp:54
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
Error running query: rt error at /home/ic/Desktop/moreSecyan/extern/libOTe/cryptoTools/cryptoTools/Network/Session.cpp:54
Error running query: rt error at /home/ic/Desktop/moreSecyan/extern/libOTe/cryptoTools/cryptoTools/Network/Session.cpp:54
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
